php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36630 umask is not being restored when each request is finished.
Submitted: 2006-03-06 15:08 UTC Modified: 2006-03-06 15:28 UTC
From: sorin at intersol dot ro Assigned:
Status: Closed Package: Filesystem function related
PHP Version: 5.1.2 OS: Fedora Core 4
Private report: No CVE-ID: None
 [2006-03-06 15:08 UTC] sorin at intersol dot ro
Description:
------------
umask does not restore the initial umask on exit, affecting other processes running after umask on the same server (svn, other scripts)
Same code works fine on the same system with php 5.0.4

Reproduce code:
---------------
<?=echo sprintf("%04o",umask(0111));?>

Expected result:
----------------
Always the same umask (default, probably 0022)

Actual result:
--------------
alternatively 0022 or 0111 until all threads ran the script at least once. Only 0111 after that...

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-03-06 15:28 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC