Fixed bug #36630 (umask not reset at the end of the request).

# This needs to be MFHed, but since it requires an API break it has to wait
# until the next minor release.